# stumpy

./: .flake8  .fossa.yml  .gitattributes  .gitignore  .readthedocs.yml  CHANGELOG.md  CITATION.bib  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  MPDist Tutorial  (1).ipynb  MPDist Tutorial .ipynb  README.md  README.rst  arimp.ipynb  azure-pipelines.yml  check_fastmath.py  conda.sh  conftest.py  docstring.py  doctest.sh  environment.yml  example.ipynb  fastmath.py  fossa.sh  min.py  min_versions.py  mypy.ini  njit_fastmath.py  numba.sh  pip.sh  pipeline-requirements.txt  postBuild  pypi.sh  pyproject.toml  ray_python_version.py  requirements.txt  setup.py  setup.sh  (+4 more)
.github/: CODEOWNERS
docs/: Constant_Subseq.ipynb  Contribute.ipynb  DTW_MP_trial.ipynb  DTW_MP_trial3_LBMP.ipynb  DTW_MP_trial4_DSLBMP.ipynb  DTW_MP_trial5_SWAMP.ipynb  DotProductDerivation.docx  FLOSS_IAC_Derivation.ipynb  LowerBound_Dist_Profile_Derivation.ipynb  MatrixProfileDerivation.docx  MatrixProfileDerivation.ipynb  Matrix_Profile_Derivation.ipynb  OTFFT.ipynb  Pearson.ipynb  Precision_Calculation.ipynb  STUMP_Tiles_Algorithm_for_Cache_Optimization.ipynb  Shapelets_discovery_ECG.ipynb  Tutorial_0.ipynb  Tutorial_1.ipynb  Tutorial_2.ipynb  Tutorial_AB_Joins.ipynb  Tutorial_Advanced_Annotation_Vectors.ipynb  Tutorial_Annotation_Vectors.ipynb  Tutorial_Basics_Of_Annotation_Vectors.ipynb  Tutorial_Consensus_Motif.ipynb  Tutorial_Contrast_Profile.ipynb  Tutorial_Contrast_Profile2.ipynb  Tutorial_Contrast_Profile3_introduction.ipynb  Tutorial_DAMP.ipynb  Tutorial_DiscordMERLIN.ipynb  Tutorial_FastMERLIN.ipynb  Tutorial_Fast_Appoximate_Matrix_Profiles.ipynb  Tutorial_Fast_Approximate_Matrix_Profiles.ipynb  Tutorial_First_Time_Contributions.ipynb  Tutorial_Geometric_Chains.ipynb  Tutorial_MERLIN.ipynb  Tutorial_MPDist.ipynb  Tutorial_MPdist.ipynb  (+45 more)
matrix_profile/: __init__.py  (+6 more)
(+182 files in other folders)
